apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            - mountPath: "/config"
              name: config
            - mountPath: "/data/nfs"
              name: nfs-storage
      volumes:
        - name: config
          emptyDir: {}
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: nfs-pvc
