apps/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  ports:
    - port: 80
      targetPort: 7878
      protocol: TCP
      name: http
  selector:
    app: radarr
  type: ClusterIP
